--- a/src/main/resources/fxml/fiscalizacao/Fiscalizacao.fxml
+++ b/src/main/resources/fxml/fiscalizacao/Fiscalizacao.fxml
@@ -10,7 +10,7 @@
       <TabPane fx:id="tpFiscalizacao" layoutY="-3.0" prefHeight="628.0" prefWidth="1140.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="30.0" tabMinWidth="100.0">
         <tabs>
         
-         <Tab fx:id="tpTabDemanda" styleClass="tabPaneClass" text="  DEMANDA  " />
+         <Tab fx:id="tpTabDocumento" styleClass="tabPaneClass" text="  DEMANDA  " />
           	<Tab fx:id="tpTabEndereco" styleClass="tabPaneClass" text="  ENDEREÇO  " />
           	<Tab fx:id="tpTabInterferencia" styleClass="tabPaneClass" text="INTERFERÊNCIA" />
           	<Tab fx:id="tpTabUsuario" styleClass="tabPaneClass" text="  USUÁRIO  " />
