--- a/src/main/resources/fxml/principal/Outorga.fxml
+++ b/src/main/resources/fxml/principal/Outorga.fxml
@@ -9,7 +9,7 @@
    <children>
       <TabPane fx:id="tpOutorga" layoutY="-3.0" prefHeight="628.0" prefWidth="1140.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="30.0" tabMinWidth="100.0">
         <tabs>
-         	<Tab fx:id="tpTabDemanda" styleClass="tabPaneClass" text="  DEMANDA  " />
+         	<Tab fx:id="tpTabDocumento" styleClass="tabPaneClass" text="  DOCUMENTO  " />
           	<Tab fx:id="tpTabEndereco" styleClass="tabPaneClass" text="  ENDEREÇO  " />
           	<Tab fx:id="tpTabInterferencia" styleClass="tabPaneClass" text="INTERFERÊNCIA" />
           	<Tab fx:id="tpTabUsuario" styleClass="tabPaneClass" text="  USUÁRIO  " />
